# winget-installer

./: .gitignore  create_packages_list.bat  pyproject.toml  run.bat
src/scripts/: build.py  list_packages.py
src/winget_installer/: __init__.py  packages.py
src/winget_installer/ui/: CheckBox.py  ListContainer.py  MainWindow.py  styles.qss
tools/: list-packages.py
tools/tps/: Column.py  Package.py
