[project]
name = "winget-installer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]

[project.scripts]
list-packages = "scripts.list_packages:main"
build = "scripts.build:main"
winget-installer = "winget_installer:main"
